--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -13,18 +13,41 @@
   border-bottom: 1px solid rgba(0, 0, 0, 0.12);
 }
 
+.footerLinksWrapper {
+  display: flex;
+  gap: 68px;
+  flex: 0 0 auto;
+}
+
 .footerSection {
   font-size: 13px;
 }
 
-.footerSection:first-child,
-.footerSection:nth-child(2) {
+.footerLinksWrapper {
+  display: flex;
+  gap: 68px;
+  flex: 0 0 auto;
+}
+
+.footerLinksWrapper > .footerSection {
   width: 227px;
   flex-shrink: 0;
 }
 
 .footerSection:last-child {
   flex: 1;
+}
+
+.footerLinksContainer {
+  display: flex;
+  gap: 68px;
+  width: auto;
+}
+
+.footerLinksContainer > .footerSection {
+  flex: 1;
+  width: auto;
+  min-width: 0;
 }
 
 .footerTitle {
@@ -134,21 +157,88 @@
   visibility: hidden;
 }
 
+.copyrightMobile {
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 12px;
+}
+
+.copyrightMobile span:first-child,
+.copyrightMobile span:nth-child(2) {
+  width: 100%;
+  flex: none;
+}
+
+.copyrightMobile span:nth-child(2) {
+  display: none;
+}
+
+.copyrightMobile span:last-child {
+  text-align: left;
+  width: 100%;
+  display: block;
+}
+
 .copyright span:last-child {
   flex: 1;
   text-align: left;
+  display: block !important;
+  visibility: visible !important;
 }
 
 @media (max-width: 768px) {
+  .footer {
+    padding: 0 16px;
+  }
+
   .footerContent {
     flex-direction: column;
     gap: 30px;
+    padding: 32px 0 40px 0;
   }
 
-  .footerSection:first-child,
-  .footerSection:nth-child(2),
+  /* Reorder: About section first, then links side by side */
   .footerSection:last-child {
+    order: -1;
+  }
+
+  .footerLinksWrapper {
+    order: 0;
+    display: flex;
+    gap: 32px;
+    width: 100%;
+  }
+
+  .footerLinksWrapper > .footerSection {
+    flex: 1;
+    min-width: 140px;
+    width: auto;
+  }
+
+  .footerSection:last-child {
+    order: 1;
     width: 100%;
     flex: none;
+  }
+
+  .copyright {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 12px;
+    padding: 32px 0;
+  }
+
+  .copyright span:first-child,
+  .copyright span:nth-child(2) {
+    width: 100%;
+    flex: none;
+  }
+
+  .copyright span:nth-child(2) {
+    display: none;
+  }
+
+  .copyright span:last-child {
+    text-align: left;
   }
 }
