--- a/src/app/layout.module.css
+++ b/src/app/layout.module.css
@@ -3,7 +3,7 @@
   background-color: #f7f7f7;
   background-image: url('/static-assets/images/background.svg');
   background-size: cover;
-  background-position: center;
+  background-position: top center;
   background-repeat: no-repeat;
   font-family: var(--Font-Family-Product);
   position: relative;
