--- a/src/app/layout.module.css
+++ b/src/app/layout.module.css
@@ -1,7 +1,7 @@
 .container {
   min-height: 100vh;
   background-color: #f7f7f7;
-  background-image: url('/static-assets/images/background.svg');
+  /* background-image set via inline style in layout.tsx to handle basePath correctly */
   background-size: cover;
   background-position: top center;
   background-repeat: no-repeat;
