--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -52,7 +52,7 @@
 
 .footerTitle {
   color: var(--sds-color-palette-black, #000000);
-  font-family: 'Proxima Nova';
+  font-family: var(--Font-Family-Proxima-Nova, 'Proxima Nova');
   font-size: 14px;
   font-style: normal;
   font-weight: 600;
@@ -67,7 +67,7 @@
   display: flex;
   align-items: center;
   color: var(--sds-color-palette-blue-60);
-  font-family: 'Proxima Nova';
+  font-family: var(--Font-Family-Proxima-Nova, 'Proxima Nova');
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
@@ -91,19 +91,7 @@
   box-sizing: border-box;
   color: rgba(0, 0, 0, 0.9);
   display: flex;
-  font-family:
-    'Proxima Nova',
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    Roboto,
-    'Oxygen-Sans',
-    Ubuntu,
-    Cantarell,
-    'Helvetica Neue',
-    Arial,
-    'Noto Sans',
-    sans-serif;
+  font-family: var(--Font-Family-Proxima-Nova, 'Proxima Nova');
   font-feature-settings: 'dlig', 'liga';
   font-size: 10px;
   font-weight: 600;
@@ -120,7 +108,7 @@
 
 .footerText {
   color: #222222;
-  font-family: 'Proxima Nova';
+  font-family: var(--Font-Family-Proxima-Nova, 'Proxima Nova');
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
@@ -138,7 +126,7 @@
   gap: 68px;
   padding: 44px 0 32px;
   color: var(--sds-color-palette-black, #000000);
-  font-family: 'Proxima Nova';
+  font-family: var(--Font-Family-Proxima-Nova, 'Proxima Nova');
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
