--- a/src/components/button/button.module.css
+++ b/src/components/button/button.module.css
@@ -8,3 +8,8 @@
   font-weight: 700;
   cursor: pointer;
 }
+
+.button:focus-visible {
+  outline: 2px solid var(--Buttons-Solid-Primary-Default, #3969ef);
+  outline-offset: 2px;
+}
