--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -84,6 +84,14 @@
   text-decoration: underline;
 }
 
+.footerLink:focus-visible,
+.footerTextLink:focus-visible {
+  outline: 2px solid var(--sds-color-palette-blue-60);
+  outline-offset: 2px;
+  text-decoration: underline;
+  border-radius: 2px;
+}
+
 .badge {
   align-items: center;
   background-color: rgb(249, 190, 26);
