--- a/src/components/consent-form/consent-form.module.css
+++ b/src/components/consent-form/consent-form.module.css
@@ -31,7 +31,6 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
-  align-self: stretch;
 
   p {
     color: #222222;
@@ -40,6 +39,7 @@
     font-style: normal;
     font-weight: 700;
     line-height: 24px;
+    text-align: center;
   }
 }
 
@@ -64,6 +64,7 @@
       font-style: normal;
       font-weight: 400;
       line-height: 24px;
+      margin-block: 1em;
     }
   }
 }
