--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -13,7 +13,6 @@
   display: flex;
   max-width: 768px;
   width: 100%;
-  padding: 32px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -30,6 +29,7 @@
   height: 768px;
   max-height: 100vh;
   position: relative;
+  overflow: hidden;
 }
 
 .spinnerContainer {
