--- a/src/components/consent-form/consent-form.module.css
+++ b/src/components/consent-form/consent-form.module.css
@@ -30,6 +30,12 @@
     line-height: 24px;
     font-weight: 400;
     text-align: left;
+
+    span {
+      margin-top: 16px;
+      display: block;
+      font-weight: 700;
+    }
   }
 }
 
