--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -11,8 +11,8 @@
   align-items: flex-start;
   gap: 68px;
   align-self: stretch;
-  border-top: 1px solid rgba(0, 0, 0, 0.12);
-  border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+  border-top: 1px solid var(--color-border-subtle);
+  border-bottom: 1px solid var(--color-border-subtle);
   width: 100%;
   max-width: 100%;
   box-sizing: border-box;
@@ -57,7 +57,7 @@
 
 .footerTitle {
   color: var(--sds-color-palette-black, #000000);
-  font-family: var(--Font-Family-Proxima-Nova, 'Proxima Nova');
+  font-family: var(--Font-Family-Proxima-Nova);
   font-size: 14px;
   font-style: normal;
   font-weight: 600;
@@ -73,7 +73,7 @@
   display: flex;
   align-items: center;
   color: var(--sds-color-palette-blue-60);
-  font-family: var(--Font-Family-Proxima-Nova, 'Proxima Nova');
+  font-family: var(--Font-Family-Proxima-Nova);
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
@@ -105,7 +105,7 @@
   box-sizing: border-box;
   color: rgba(0, 0, 0, 0.9);
   display: flex;
-  font-family: var(--Font-Family-Proxima-Nova, 'Proxima Nova');
+  font-family: var(--Font-Family-Proxima-Nova);
   font-feature-settings: 'dlig', 'liga';
   font-size: 10px;
   font-weight: 600;
@@ -121,8 +121,8 @@
 }
 
 .footerText {
-  color: #222222;
-  font-family: var(--Font-Family-Proxima-Nova, 'Proxima Nova');
+  color: var(--sds-color-text-01);
+  font-family: var(--Font-Family-Proxima-Nova);
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
@@ -140,7 +140,7 @@
   gap: 68px;
   padding: 44px 0 32px;
   color: var(--sds-color-palette-black, #000000);
-  font-family: var(--Font-Family-Proxima-Nova, 'Proxima Nova');
+  font-family: var(--Font-Family-Proxima-Nova);
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
