--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -183,14 +183,12 @@
   color-scheme: light;
 }
 
-/* We don't have a dark theme... yet */
 [data-theme='dark'] {
   --background: #ffffff;
   --foreground: #171717;
   color-scheme: dark;
 }
 
-/* Default to system preference before JS loads */
 @media (prefers-color-scheme: dark) {
   :root:not([data-theme]) {
     --background: #ffffff;
@@ -199,13 +197,17 @@
   }
 }
 
-html,
-body {
+html {
   max-width: 100vw;
   overflow-x: hidden;
+  overflow-y: auto;
 }
 
 body {
+  max-width: 100vw;
+  overflow-x: hidden;
+  overflow-y: visible;
+  height: fit-content;
   color: var(--foreground);
   background: var(--background);
   font-family: var(--Font-Family-Product);
